# acim-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bot.py  docker-compose.yml  pyproject.toml
data/: lessons.json
tests/: test_bot.py
