[project]
name = "acim-bot"
version = "1.0.0"
description = "A Course in Miracles bot for Discord and Telegram"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
dev = ["ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.mypy]
python_version = "3.11"
strict = true
